[gd_scene load_steps=8 format=3 uid="uid://c8iabgk0icjvt"]

[ext_resource type="Script" path="res://shop.gd" id="1_ohvb8"]
[ext_resource type="Texture2D" uid="uid://dtbcyb220oury" path="res://assets/caveBG.png" id="2_oq40w"]
[ext_resource type="Texture2D" uid="uid://72tvrltg3ud1" path="res://assets/buttonP.png" id="3_kcnxf"]
[ext_resource type="Texture2D" uid="uid://dvwk2jyjmcn5k" path="res://assets/Button.png" id="4_655hj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qe76q"]
texture = ExtResource("3_kcnxf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l8ct0"]
texture = ExtResource("3_kcnxf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q3soh"]
texture = ExtResource("4_655hj")

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ohvb8")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_oq40w")

[node name="CharacterScroll" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterList" type="VBoxContainer" parent="CharacterScroll"]
layout_mode = 2
size_flags_vertical = 3

[node name="CoinsLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 100
text = "Coins: 100"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 725.0
offset_top = 22.0
offset_right = 1025.0
offset_bottom = 129.0
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_qe76q")
theme_override_styles/pressed = SubResource("StyleBoxTexture_l8ct0")
theme_override_styles/normal = SubResource("StyleBoxTexture_q3soh")
text = "Back"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
